--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div id="projects" class="card">
                         <h2>Projects :</h2>
                         <ul class="list">
-                            <li><a href="https://lgellson.github.io/Beebp.io/" target="_blank">Beeb.io</a></li>
+                            <li><a href="https://lgellson.github.io/Beebp.io/" target="_blank">Beebp.io</a></li>
                             <li><a href="https://lgellson.github.io/Clock/" target="_blank">Cloc</a></li>
                             <li><a href="https://lgellson.github.io/Frosted-glass/" target="_blank">Frosted Glass design</a></li>
                         </ul>
