fix: add missing letter in clock

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <h2>Projects :</h2>
                         <ul class="list">
                             <li><a href="https://lgellson.github.io/Beebp.io/" target="_blank">Beebp.io</a></li>
-                            <li><a href="https://lgellson.github.io/Clock/" target="_blank">Cloc</a></li>
+                            <li><a href="https://lgellson.github.io/Clock/" target="_blank">Clock</a></li>
                             <li><a href="https://lgellson.github.io/Frosted-glass/" target="_blank">Frosted Glass design</a></li>
                         </ul>
                     </div>
